style(iFramePlayer): fix positioning issue on smaller viewport heights

--- a/src/film-database/components/iframe/player/_fdiFramePlayer.scss
+++ b/src/film-database/components/iframe/player/_fdiFramePlayer.scss
@@ -21,17 +21,15 @@
     background: linear-gradient(to top, rgb(0, 0, 1) 50%, rgba(0, 0, 0, 0.5) 80%, rgba(0, 0, 0, 0) 100%);
     pointer-events: none;
   }
-  @media (min-width: 1440px) {
-    &::after {
-      content: '';
-      position: absolute;
-      left: -1px;
-      top: 0;
-      width: 15%;
-      height: 100%;
-      background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 1) 100%);
-      pointer-events: none;
-    }
+  &::after {
+    content: '';
+    position: absolute;
+    left: -1px;
+    top: 0;
+    width: 15%;
+    height: 100%;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 1) 100%);
+    pointer-events: none;
   }
   @media (max-width: 1439px) {
     width: 100svw;
